# metacritic-crawler

./: output.json  pyproject.toml
src/: main.py
src/crawler/: crawler.py  crawler_config.py  game_crawler.py  metacritic_crawler.py  review_list_crawler.py  year_crawler.py
src/utils/: metacritic_uri_builder.py  request_utils.py
