[tool.poetry]
name = "metacritic-crawler"
version = "0.1.0"
description = ""
authors = ["Vaclav Honzik <vaclavhonzik98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.2"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
